// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_184"
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_184-Media"
      onClick={null}
    >
      <img
        alt="Media Description"
        className="Image__ImageWrapper-sc-18abvff-0 hXzVKy Media__ImageWrapper-sc-1ofqnpx-1 iIUijx"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Media Description"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_184-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 gCneCZ"
            id={null}
            onClick={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 lhHlxO"
              color={null}
              data-icon="bookmark"
              data-prefix="fas"
              focusable="false"
              fontSize="0.875em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <a
            className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </a>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_184-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_184-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_184-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_184-Menu"
              name="menu-icon-storyshots_184-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cCcBKL Card__CardGridWrapper-sc-1g3s676-4 dKngjY"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_185"
    media=""
    onClick={null}
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_186"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_186-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Card Title
          </h4>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_187"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_187-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Card Title
          </h4>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_187-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_188"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_188-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 gCneCZ"
            id={null}
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iOVbHb Avatar__AvatarText-sc-1vuf9om-0 jRlbNO"
              fontSize="1rem"
              fontWeight={500}
              id={null}
              letterSpacing="0.5px"
            >
              GP
            </p>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Card Title
          </h4>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_188-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_189"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_189-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 gCneCZ"
            id={null}
            onClick={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-star fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 lhHlxO"
              color={null}
              data-icon="star"
              data-prefix="far"
              focusable="false"
              fontSize="0.875em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Card Title
          </h4>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_189-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_190"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_190-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Card Title
          </h4>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_190-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_190-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <span>
             
          </span>
        </div>
      </div>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_191"
    media=""
    onClick={[Function]}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_191-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <a
            className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </a>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_191-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_191-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_191-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_191-Menu"
              name="menu-icon-storyshots_191-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cCcBKL Card__CardGridWrapper-sc-1g3s676-4 dKngjY"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_192"
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_192-Media"
      onClick={null}
    >
      <img
        alt="Media Description"
        className="Image__ImageWrapper-sc-18abvff-0 hXzVKy Media__ImageWrapper-sc-1ofqnpx-1 iIUijx"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Media Description"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_192-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="plus"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 eoSMUW"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_192-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_192-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_192-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_192-Menu"
              name="menu-icon-storyshots_192-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_193"
    media="https://player.vimeo.com/video/798022"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_193-Media"
      onClick={null}
    >
      <iframe
        allow="fullscreen"
        allowFullScreen={true}
        className="Media__Frame-sc-1ofqnpx-4 dkKlmr"
        frameBorder="0"
        height="100vh"
        src="https://player.vimeo.com/video/798022"
        title="iframe"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_193-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="plus"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 eoSMUW"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_193-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_193-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_193-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_193-Menu"
              name="menu-icon-storyshots_193-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_194"
    media="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_194-Media"
      onClick={null}
    >
      <video
        className="Media__Video-sc-1ofqnpx-3 imikFd"
        controls={true}
        title="video/mp4"
        width="100%"
      >
        <source
          src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4"
          type="video/mp4"
        />
        Your browser does not support the video element.
      </video>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_194-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="plus"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 eoSMUW"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_194-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_194-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_194-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_194-Menu"
              name="menu-icon-storyshots_194-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_195"
    media="https://www.youtube.com/embed/GJVwbyAY4Sk?autoplay=0"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_195-Media"
      onClick={null}
    >
      <iframe
        allow="fullscreen"
        allowFullScreen={true}
        className="Media__Frame-sc-1ofqnpx-4 dkKlmr"
        frameBorder="0"
        height="100vh"
        src="https://www.youtube.com/embed/GJVwbyAY4Sk?autoplay=0"
        title="iframe"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_195-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="plus"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 eoSMUW"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_195-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_195-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_195-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_195-Menu"
              name="menu-icon-storyshots_195-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
    href={null}
    id="storyshots_196"
    media="https://www.w3schools.com/html/horse.mp3"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_196-Media"
      onClick={null}
    >
      <audio
        className="Media__Audio-sc-1ofqnpx-2 hTgoaP"
        controls={true}
        title="audio/mpeg"
      >
        <source
          src="https://www.w3schools.com/html/horse.mp3"
          type="audio/mpeg"
        />
        Your browser does not support the audio element.
      </audio>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_196-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h4
              className="Typography__TitleText-sc-19auepv-2 dDJKKW"
              fontSize="1.35rem"
              fontWeight="400"
              letterSpacing="0px"
            >
              Card Title
            </h4>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="plus"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 eoSMUW"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_196-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
      id="storyshots_196-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor={null}
                letterSpacing=".5px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
            id="menu-popper-storyshots_196-Menu"
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
              disabled={false}
              htmlFor={null}
              id="menu-icon-storyshots_196-Menu"
              name="menu-icon-storyshots_196-Menu"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</section>
`;
